--- a/src/main/resources/templates/manager/order/paySuccess.html
+++ b/src/main/resources/templates/manager/order/paySuccess.html
@@ -6,12 +6,13 @@
 </head>
 <head th:include="include :: header"></head>
 <body>
+<div class="bg-success " style="height: 4em;">
+    <p class="lead" style="height: 2em;padding-top: 1em">订单付款成功！</p>
+</div>
 <div class="wrapper wrapper-content ">
     <div class="row">
-        <div class="col-sm-12">
-            <div class="text-center center-block">
-                <img src="/img/farm_mall_logo.jpg" class="img-responsive" style="margin-top: 1em;width: 8em;height: 8em">
-            </div>
+        <div class="col-sm-12 text-center center-block">
+            <span class="fa fa-check-circle-o" style="color: #4c9e4c;font-size:10em;margin-top: 0.5em"></span>
         </div>
     </div>
 </div>
